# ctr

./: .clang-format  .gitignore  :w  ;  CMakeLists.txt  README.md  Taskfile.yml
.cache/clangd/index/: algos.hpp.48CE5265106E470A.idx  automaton.hpp.0293D4EBFC1086E8.idx  constants.hpp.00B8B7B8CB924CEE.idx  data_structures.hpp.2EAC15A1775096E6.idx  encoding.hpp.35A31D314FCB5808.idx  fixed_string.hpp.2EB0044CCD8061C5.idx  nfa.cpp.B6D083B72B469CB2.idx  nfa.hpp.5735CAB619848F36.idx  nfa_test.cpp.B88020A8A571C920.idx  parser_test.cpp.FDB34305A0A923B8.idx
src/common/: CMakeLists.txt  algos.hpp  constants.hpp  data_structures.hpp  encoding.hpp  fixed_string.hpp  stack.hpp
src/common/pure/: algos.hpp  data_structures.hpp
src/parser/: CMakeLists.txt  automaton.hpp  grammar.hpp  nfa.cpp  nfa.hpp  parser.hpp
src/parser/nfa/: automaton.hpp  nfa.cpp  nfa.hpp
test/parser/: CMakeLists.txt  nfa_test.cpp  parser_test.cpp
